<resources>
    <string name="app_name">ToDoProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_to_do">Cadastro de To Do</string>

    <string name="reg_descricao">Descrição</string>
    <string name="reg_data_entrega">Data de Entrega</string>
    <string name="reg_categoria">Categoria</string>
    <string name="reg_anexo">Anexos</string>
    <string name="reg_prioridade">Prioridade</string>

    <string name="reg_salvar">Salvar</string>
    <string name="reg_cancelar">Cancelar</string>

    <string name="reg_editar">Editar</string>
    <string name="reg_excluir">Excluir</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
